Revision history for HTML::StateTable

          - Handles paging and sorting
          - Added date column trait and working empty div js rendered tables
          - Added method to dereference compound column references
          - Wrote Table renderer under protest
          - Serialises empty div. Needs resultset

0.1.1     2021-04-30 13:46:51
          - Added project files to master branch
